Se mejora la app en la interfaz

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mis Deudas</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="img/favicon_deuda.png" type="image/png">
 </head>
 <body>
   <h1>📋 Mis Deudas</h1>
