agregar imagen a la app del mivil

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Mis Deudas</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/favicon_deuda.png" type="image/png">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <h1>📋 Mis Deudas</h1>
