Mejoramiento de la imagen de la APP para movil

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/favicon_deuda.png" type="image/png">
   <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="img/favicon_deuda-180.png">
+  <meta name="theme-color" content="#007bff">
 </head>
 <body>
   <h1>📋 Mis Deudas</h1>
